<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/upcoming_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/services"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:divider="@drawable/divider"
            android:showDividers="middle">

            <Button
                android:id="@+id/book_btn"

                android:layout_width="270dp"
                android:layout_height="60dp"
                android:background="@drawable/buttonshape"
                android:text="@string/book"
                android:textColor="#000000"
                android:textSize="20dp" />

            <Button
                android:id="@+id/presc_btn"

                android:layout_width="270dp"
                android:layout_height="60dp"
                android:background="@drawable/buttonshape"
                android:text="@string/prescriptions"
                android:textColor="#000000"
                android:textSize="20dp" />

            <Button
                android:id="@+id/cons_btn"

                android:layout_width="270dp"
                android:layout_height="60dp"
                android:background="@drawable/buttonshape"
                android:text="@string/consult"
                android:textColor="#000000"
                android:textSize="20dp" />

            <Button
                android:id="@+id/house_btn"

                android:layout_width="270dp"
                android:layout_height="60dp"
                android:background="@drawable/buttonshape"
                android:text="@string/house"
                android:textColor="#000000"
                android:textSize="20dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>